# cpp-5786

./: .gitignore  LICENSE  README.md  preparations.md  syllabus.doc  ~$llabus.doc  ~WRL0001.tmp
01-what-is-cpp/1-memory-cpp-vs-java/: CMakeLists.txt  Makefile
01-what-is-cpp/1-time-cpp-vs-python/: CMakeLists.txt  Makefile  count_permutations  traveling_salesman
01-what-is-cpp/2-hello/: CMakeLists.txt  Makefile  hello.cpp
01-what-is-cpp/3-namespace/: CMakeLists.txt  Makefile
01-what-is-cpp/5-exceptions/: CMakeLists.txt  Makefile  Makefile0  throw_a_string  throw_a_string.cpp  throw_an_exception  throw_an_object
01-what-is-cpp/6-assertions/: CMakeLists.txt  run-in-two-modes
01-what-is-cpp/8-doctest/: CMakeLists.txt  Factorial.cpp  Makefile  Makefile0  TestMain.cpp
01-what-is-cpp/9-tidy/: CMakeLists.txt  Makefile
01-what-is-cpp/99-cpp20-test/: CMakeLists.txt  Makefile
02-classes-constructors-destructors/0-overloading/: CMakeLists.txt
02-classes-constructors-destructors/1-inline-outline/: CMakeLists.txt
02-classes-constructors-destructors/1-inline-outline-files/: CMakeLists.txt  Complex.hpp  Makefile0
02-classes-constructors-destructors/2-makefile/: CMakeLists.txt  Point.hpp
02-classes-constructors-destructors/3-static/: CMakeLists.txt  points.index.hpp
02-classes-constructors-destructors/4-constructors/: CMakeLists.txt  Point.hpp
02-classes-constructors-destructors/5-destructors/: CMakeLists.txt
02-classes-constructors-destructors/5-destructors/units/: IntList.hpp
02-classes-constructors-destructors/6-destruct-arrays/: CMakeLists.txt
02-classes-constructors-destructors/6-destruct-arrays/units/: IntList.hpp
02-classes-constructors-destructors/7-valgrind/: CMakeLists.txt
03-composition-references/0-composition/: CMakeLists.txt
03-composition-references/1-reference/: CMakeLists.txt
03-composition-references/2-reference-return/: CMakeLists.txt  Complex.cpp
03-composition-references/7-const-methods/: CMakeLists.txt  Complex.cpp
03-composition-references/8-friend-functions/: CMakeLists.txt
04-operator-overloading/0-int-string-operators/: CMakeLists.txt
04-operator-overloading/1-arithmetic-operators/: CMakeLists.txt
04-operator-overloading/2-brackets-operator/: CMakeLists.txt
04-operator-overloading/2-brackets-operator/units/: IntList.hpp
04-operator-overloading/4-parentheses-operator/: CMakeLists.txt  polynomial.cpp
04-operator-overloading/8-suffix-operator/: CMakeLists.txt
05-copy-convert/1-copy-constructor/: CMakeLists.txt  IntList_bad.cpp  IntList_good.cpp
05-copy-convert/5-conversion operator/: CMakeLists.txt  Fraction.cpp
06-inheritance/1-order-of-ctors-and-dtors/: CMakeLists.txt
06-inheritance/4-pure-virtual/: CMakeLists.txt
07-rtti/1-redirection/: CMakeLists.txt
07-rtti/3-manipulators-float-precision/: CMakeLists.txt  precision.cpp
07-rtti/4-image/: CMakeLists.txt  image1_struct.cpp  image2_ptr.cpp  image3_virtual.cpp
07-rtti/5-casting/: CMakeLists.txt
07-rtti/6-typeid/: CMakeLists.txt
08-templates-iterators/1-functions/: 1-swap.cpp  CMakeLists.txt
08-templates-iterators/2-Stack/: CMakeLists.txt
09-specializations-metaprogramming/1-variations/: CMakeLists.txt
09-specializations-metaprogramming/2-specialization-swap/: CMakeLists.txt
09-specializations-metaprogramming/3-specialization-classes/: CMakeLists.txt  vector_template.cpp
09-specializations-metaprogramming/4-specialization-type-info/: CMakeLists.txt
09-specializations-metaprogramming/5-decltype/: CMakeLists.txt  decltype.cpp
09-specializations-metaprogramming/6-metaprogramming-derivative/: CMakeLists.txt  rgb.hpp
09-specializations-metaprogramming/7-metaprogramming-physics/: CMakeLists.txt
10-stl-containers/0-tuples/: CMakeLists.txt
10-stl-containers/1-vectors/: CMakeLists.txt
10-stl-containers/2-basic-strings/: CMakeLists.txt  basic_string.cpp
10-stl-containers/3-sets/: CMakeLists.txt
10-stl-containers/4-maps/: CMakeLists.txt
10-stl-containers/8-type-traits/: CMakeLists.txt  vector_rvalue.cpp
10-stl-containers/9-riddles/: CMakeLists.txt
11-stl-algorithms/01-io-iterators/: CMakeLists.txt
11-stl-algorithms/03-insert-erase/: CMakeLists.txt
11-stl-algorithms/10-queries/: CMakeLists.txt
11-stl-algorithms/11-set-algorithms/: CMakeLists.txt
11-stl-algorithms/12-permutations/: CMakeLists.txt  heaps.cpp  output_containers.hpp  shapley_value.cpp
11-stl-algorithms/13-movers/: CMakeLists.txt
11-stl-algorithms/14-value-modifiers/: CMakeLists.txt
11-stl-algorithms/15-runes/: CMakeLists.txt  is_X.cpp
11-stl-algorithms/16-structure-changers/: CMakeLists.txt
11-stl-algorithms/17-foreach-transform/: CMakeLists.txt
12-smart-pointers/1-musician/: CMakeLists.txt  main.cpp  mainstd.cpp
12-smart-pointers/2-move-rvalue-reference/: CMakeLists.txt
12-smart-pointers/3-stack/: CMakeLists.txt
12-smart-pointers/4-weak_ptr/: CMakeLists.txt
12-smart-pointers/5-playground/: CMakeLists.txt
old/: codeforces.md  leetcode.md  syllabus_en_7023010.docx
